0026047: Lost colors for IGES export

Method XSAlgo_AlgoContainer::MergeTransferInfo() is corrected to keep locations of sub-shapes when recording transfer results in the map.

Add test case bugs/xde/bug26047